--- a/examserver/examserver/src/main/resources/application.properties
+++ b/examserver/examserver/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3307/exam?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/exam?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 spring.datasource.driver-class=com.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
