--- a/examportal angular/front/package.json
+++ b/examportal angular/front/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@ckeditor/ckeditor5-angular": "^4.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^35.0.1",
     "bootstrap-grid-only-css": "^4.1.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
